@@ -593,7 +593,7 @@ following image formats are supported:
     @tab Digital Picture Exchange
 @item EXR          @tab   @tab X
     @tab OpenEXR
-@item FITS         @tab   @tab X
+@item FITS         @tab X @tab X
     @tab Flexible Image Transport System
 @item JPEG         @tab X @tab X
     @tab Progressive JPEG is not supported.
